// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The RelatedContent component renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f7f7f7",
      "paddingVertical": 20,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#303030",
        "fontFamily": null,
        "fontSize": 20.02,
        "fontWeight": "700",
        "lineHeight": 25.46,
        "marginBottom": 10,
        "textAlign": "center",
      }
    }
  >
    More Like This
  </Text>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 6,
        "marginHorizontal": 10,
        "marginVertical": 5,
        "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 3,
      }
    }
    testID={undefined}
  >
    <View
      style={
        Object {
          "borderRadius": 6,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
            "minHeight": 110,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1.66,
              "paddingHorizontal": 20,
              "paddingVertical": 15,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#303030",
                "fontFamily": null,
                "fontSize": 20.02,
                "fontWeight": "700",
                "lineHeight": 25.46,
              }
            }
          >
            Hi
          </Text>
          <View
            flexed={false}
            style={
              Object {
                "alignItems": "center",
                "flex": null,
                "flexDirection": "row",
              }
            }
          >
            <Svg
              height={21.6}
              viewBox="0 0 24 24"
              width={21.6}
            >
              <Path
                d="M4.6 3.64v16.356c0 .004 0 .004-.003.004h14.806c-.004 0-.003 0-.003-.004V3.64c0-.004 0-.004.003-.004H4.597c.004 0 .003 0 .003.004zm-1.6 0C3 2.734 3.717 2 4.597 2h14.806C20.285 2 21 2.734 21 3.64v16.356c0 .906-.717 1.64-1.597 1.64H4.597c-.882 0-1.597-.734-1.597-1.64V3.64zm4 3.27c0 .45.366.817.818.817h8.364c.452 0 .818-.366.818-.818 0-.454-.366-.82-.818-.82H7.818c-.452 0-.818.366-.818.82zm0 4.908c0 .452.366.818.818.818h8.364c.452 0 .818-.366.818-.818 0-.452-.366-.818-.818-.818H7.818c-.452 0-.818.366-.818.818zm0 4.91c0 .45.366.817.818.817h4.764c.452 0 .818-.366.818-.818 0-.452-.366-.818-.818-.818H7.818c-.452 0-.818.364-.818.816z"
                fill="#303030"
              />
            </Svg>
            <View
              style={
                Object {
                  "flex": 1,
                  "paddingHorizontal": 10,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "#303030",
                    "fontFamily": null,
                    "fontSize": 14,
                    "lineHeight": 15.87,
                  }
                }
              >
                Bob
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 6,
        "marginHorizontal": 10,
        "marginVertical": 5,
        "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 3,
      }
    }
    testID={undefined}
  >
    <View
      style={
        Object {
          "borderRadius": 6,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
            "minHeight": 110,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1.66,
              "paddingHorizontal": 20,
              "paddingVertical": 15,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#303030",
                "fontFamily": null,
                "fontSize": 20.02,
                "fontWeight": "700",
                "lineHeight": 25.46,
              }
            }
          >
            Hi 2
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 6,
        "marginHorizontal": 10,
        "marginVertical": 5,
        "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 3,
      }
    }
    testID={undefined}
  >
    <View
      style={
        Object {
          "borderRadius": 6,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
            "minHeight": 110,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1.66,
              "paddingHorizontal": 20,
              "paddingVertical": 15,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#303030",
                "fontFamily": null,
                "fontSize": 20.02,
                "fontWeight": "700",
                "lineHeight": 25.46,
              }
            }
          >
            Hi 3
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`The RelatedContent component renders empty state 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f7f7f7",
      "paddingVertical": 20,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "color": "#303030",
        "fontFamily": null,
        "fontSize": 20.02,
        "fontWeight": "700",
        "lineHeight": 25.46,
        "marginBottom": 10,
        "textAlign": "center",
      }
    }
  >
    More Like This
  </Text>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 6,
        "marginHorizontal": 10,
        "marginVertical": 5,
        "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 3,
      }
    }
    testID={undefined}
  >
    <View
      style={
        Object {
          "borderRadius": 6,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
            "minHeight": 110,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1.66,
              "paddingHorizontal": 20,
              "paddingVertical": 15,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "#dddddd",
                "borderRadius": 6,
                "height": 20.02,
                "marginVertical": 2.7200000000000006,
                "width": "60%",
              }
            }
          />
          <View
            flexed={false}
            style={
              Object {
                "alignItems": "center",
                "flex": null,
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#dddddd",
                  "borderRadius": 6,
                  "height": 21.6,
                  "width": 21.6,
                }
              }
            />
            <View
              style={
                Object {
                  "flex": 1,
                  "paddingHorizontal": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "stretch",
                    "backgroundColor": "#dddddd",
                    "borderRadius": 6,
                    "height": 14,
                    "marginVertical": 0.9349999999999996,
                    "width": "40%",
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 6,
        "marginHorizontal": 10,
        "marginVertical": 5,
        "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 3,
      }
    }
    testID={undefined}
  >
    <View
      style={
        Object {
          "borderRadius": 6,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
            "minHeight": 110,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1.66,
              "paddingHorizontal": 20,
              "paddingVertical": 15,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "#dddddd",
                "borderRadius": 6,
                "height": 20.02,
                "marginVertical": 2.7200000000000006,
                "width": "60%",
              }
            }
          />
          <View
            flexed={false}
            style={
              Object {
                "alignItems": "center",
                "flex": null,
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#dddddd",
                  "borderRadius": 6,
                  "height": 21.6,
                  "width": 21.6,
                }
              }
            />
            <View
              style={
                Object {
                  "flex": 1,
                  "paddingHorizontal": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "stretch",
                    "backgroundColor": "#dddddd",
                    "borderRadius": 6,
                    "height": 14,
                    "marginVertical": 0.9349999999999996,
                    "width": "40%",
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View
    accessibilityComponentType={undefined}
    accessibilityLabel={undefined}
    accessibilityTraits={undefined}
    accessible={true}
    hitSlop={undefined}
    nativeID={undefined}
    onLayout={undefined}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 6,
        "marginHorizontal": 10,
        "marginVertical": 5,
        "shadowColor": "rgba(133, 133, 133, 0.30000000000000004)",
        "shadowOffset": Object {
          "height": 1,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 3,
      }
    }
    testID={undefined}
  >
    <View
      style={
        Object {
          "borderRadius": 6,
          "overflow": "hidden",
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "justifyContent": "space-between",
            "minHeight": 110,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1.66,
              "paddingHorizontal": 20,
              "paddingVertical": 15,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "#dddddd",
                "borderRadius": 6,
                "height": 20.02,
                "marginVertical": 2.7200000000000006,
                "width": "60%",
              }
            }
          />
          <View
            flexed={false}
            style={
              Object {
                "alignItems": "center",
                "flex": null,
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#dddddd",
                  "borderRadius": 6,
                  "height": 21.6,
                  "width": 21.6,
                }
              }
            />
            <View
              style={
                Object {
                  "flex": 1,
                  "paddingHorizontal": 10,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "stretch",
                    "backgroundColor": "#dddddd",
                    "borderRadius": 6,
                    "height": 14,
                    "marginVertical": 0.9349999999999996,
                    "width": "40%",
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
